Fixed centering Issue in Mozilla and Edge
Caused the columns image to be off center.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #574d4f;
-    background: url("columns-compressed.jpg")no-repeat center center;
+    background: url("columns-compressed.jpg") no-repeat center center;
+	background-attachment: fixed;
     background-size: cover;
     width: 100%;
     height: 100%;
